feat: update README. add inserting of sample data into the DB